# handlers/catalogs/routes.go
@@ -15,5 +15,6 @@ func RegisterRoutes(r *gin.RouterGroup) {
 		catalogs.GET("/", GetAllCatalogs)
 		catalogs.GET("/:catalogID/themes", GetThemesFromCatalog)
 		catalogs.GET("/:catalogID/themes/:themeID", GetThemeDetailsFromCatalog)
+		catalogs.GET("/:catalogID/themes/:themeID/puzzles/:puzzleID", GetPuzzleFromThemeCatalog)
 	}
 }
